[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maxwailab"
version = "1.1.3"
description = "Bootstrap-based model stability and supervised binning toolkit"
authors = [
  { name="Max Wienandts" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "lightgbm",
  "matplotlib",
  "seaborn",
  "tqdm"
]

[project.optional-dependencies]
survival = [
    "lifelines>=0.27",
    "scikit-survival>=0.20"
]
all = [
    "lifelines>=0.27",
    "scikit-survival>=0.20"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/MaxWienandts/maxwailab"