[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maxwailab"
version = "1.3.9"
description = "Bootstrap-based model stability and supervised binning toolkit"
authors = [
  { name="Max Wienandts" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "lightgbm",
  "matplotlib",
  "seaborn",
  "tqdm",
]

[project.optional-dependencies]
survival = [
    "lifelines>=0.27",
    "scikit-survival>=0.20"
]
pyspark = [
    "pyspark>=3.5",
    "statsmodels",
   
]
all = [
    "lifelines>=0.27",
    "scikit-survival>=0.20",
    "pyspark>=3.5",
    "statsmodels",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/MaxWienandts/maxwailab"